kubernetes/manifests/envoy-gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway
  namespace: envoy-gateway
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-glance
    hostname: "start.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: glance-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-plex
    hostname: "plex.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: plex-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-hubble
    hostname: "hubble.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: hubble-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-grafana
    hostname: "grafana.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: grafana-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-victoria-logs
    hostname: "logs.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: victoria-logs-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-flux
    hostname: "flux.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: flux-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-immich
    hostname: "photos.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: immich-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-nextcloud
    hostname: "drive.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: nextcloud-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-recipes
    hostname: "recipes.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: recipes-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-duplicati
    hostname: "backup.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: duplicati-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-collabora
    hostname: "docs.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: collabora-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-audiobook
    hostname: "bookshelf.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: audiobook-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-home-assistant
    hostname: "home.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: home-assistant-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-adventurelog-frontend
    hostname: "trips.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: adventurelog-frontend-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-adventurelog-backend
    hostname: "backend-trips.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: adventurelog-backend-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: https-joplin
    hostname: "notes.nullservers.com"
    port: 443
    protocol: HTTPS
    tls:
      mode: Terminate
      certificateRefs:
      - name: joplin-tls
        kind: Secret
        namespace: envoy-gateway
    allowedRoutes:
      namespaces:
        from: Same
  - name: http
    port: 9000
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
